@@ -935,6 +935,17 @@ pidgin_blist_update_privacy_cb(PurpleBuddy *buddy)
 }
 
 static gboolean
+add_buddy_account_filter_func(PurpleAccount *account)
+{
+	PurpleConnection *gc = purple_account_get_connection(account);
+	PurplePluginProtocolInfo *prpl_info = NULL;
+
+	prpl_info = PURPLE_PLUGIN_PROTOCOL_INFO(gc->prpl);
+
+	return (prpl_info->add_buddy != NULL);
+}
+
+static gboolean
 chat_account_filter_func(PurpleAccount *account)
 {
 	PurpleConnection *gc = purple_account_get_connection(account);
@@ -7098,7 +7109,7 @@ pidgin_blist_request_add_buddy(PurpleAccount *account, const char *username,
 		account,
 		_("Add Buddy"), "add_buddy",
 		_("Add a buddy.\n"),
-		G_CALLBACK(add_buddy_select_account_cb), NULL,
+		G_CALLBACK(add_buddy_select_account_cb), add_buddy_account_filter_func,
 		G_CALLBACK(add_buddy_cb));
 	gtk_dialog_add_buttons(GTK_DIALOG(data->rq_data.window),
 			GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
